--- a/planetas/terra/index.html
+++ b/planetas/terra/index.html
@@ -23,12 +23,16 @@
       </div>
 
       <div class="titulo">
-        <p>Mapa</p>
+        <p>Terra</p>
         <h2>The little ball blue</h2>
       </div>
 
       <div class="mundo">
         <img src="../../img/Terra.png" alt="" />
+      </div>
+
+      <div class="expandir">
+        <i class="bx bx-expand"></i>
       </div>
     </main>
 
@@ -39,6 +43,10 @@
         <p>Distance from Sun: <span>149.6 million km</span></p>
         <p>Atmosphere: <span>78% Nitrogen, 21% Oxygen</span></p>
         <p>Moons: <span>1 (The Moon)</span></p>
+      </div>
+
+      <div class="pontos">
+        <a href=""><i class="bx bx-dots-horizontal-rounded"></i></a>
       </div>
     </section>
   </body>
