feat: ajuste 2 em terra

--- a/planetas/terra/index.html
+++ b/planetas/terra/index.html
@@ -28,7 +28,18 @@
       </div>
 
       <div class="mundo">
+        <div class="rotacao">
+          <i class="bx bx-rotate-right"></i>
+        </div>
+
         <img src="../../img/Terra.png" alt="" />
+
+        <div class="circulos">
+          <li class="circulo1"><i class="bx bx-radio-circle-marked"></i></li>
+          <li class="circulo2"><i class="bx bx-radio-circle-marked"></i></li>
+          <li class="circulo3"><i class="bx bx-radio-circle-marked"></i></li>
+          <li class="circulo4"><i class="bx bx-radio-circle-marked"></i></li>
+        </div>
       </div>
 
       <div class="expandir">
