feat:ajuste na area da terra, indicacao na pagina principal

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -38,10 +38,17 @@
               alt="Venus"
             />
           </li>
+
           <li class="planeta-item">
             <h2>Terra</h2>
-            <img src="img/Terra.png" alt="Terra" />
+            <div class="acesso-planeta">
+              <img src="img/terra.png" alt="Terra" />
+              <a href="planetas/terra/index.html"
+                ><i class="bx bx-chevron-right"></i
+              ></a>
+            </div>
           </li>
+
           <li class="planeta-item">
             <h2>Marte</h2>
             <img src="img/marte.png" alt="Marte" />
